--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ html {
 
 h6 {
 	font-size: calc(1px + 1vmin);
-	margin: 0 0 -0.3rem 3.3rem;
 }
 
 a {
@@ -33,7 +32,8 @@ li {
 	display: inline;
 }
 
-a {
+a,
+a span {
 	padding: 0.5rem;
 	margin: 0.2rem;
 	border-radius: 12px;
@@ -44,10 +44,15 @@ a:visited {
 	color: inherit;
 }
 
-a:hover {
-	/* color: #ab2000d0;
-	text-shadow: 0 0 5px #ffffffa0; */
+a:hover,
+a:hover span,
+a span:hover {
 	background-color: #ab200020;
+}
+
+h2 a,
+.big-button:hover {
+	background-color: #00000000 !important;
 }
 
 main {
