--- a/src/components/layout/forms/forms.css
+++ b/src/components/layout/forms/forms.css
@@ -12,8 +12,17 @@ form button {
 form select,
 form input {
 	border: none;
-	/* box-shadow: 2px 2px 5px #00000040 inset; */
 	border: 3px solid #f4c008ff;
+}
+
+form select:hover,
+form input:hover {
+	box-shadow: 0.1rem 0.2rem 0.15rem -0.05rem #00000040 inset;
+}
+
+form select:focus,
+form input:focus {
+	box-shadow: 0.1rem 0.2rem 0.15rem -0.05rem #00000040 inset;
 }
 
 form select:focus,
@@ -26,7 +35,8 @@ form input:hover {
 
 form select,
 form input,
-form button {
+form button,
+#modal button {
 	height: 1.9rem;
 	font-size: calc(10px + 2vmin);
 	margin: 0.25rem 0.6rem;
@@ -39,7 +49,6 @@ form button {
 
 form button {
 	padding: 0.2rem 0.5rem;
-	margin: 0 0 0 0.6rem;
 }
 
 form#user-identification-form {
