--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+@import url('./common.css');
+
 html {
-	background-color: #fefbefff;
+	background-color: var(--main-background-color);
 	min-height: 100vh;
 	flex-direction: column;
 	align-items: center;
@@ -11,7 +13,7 @@ html {
 	margin: 0;
 	padding: 0;
 	border: 0 none;
-	color: #832d1eff;
+	color: var(--text-color);
 	cursor: default;
 }
 
@@ -26,16 +28,20 @@ a {
 ul,
 ol {
 	list-style-type: none;
-	/* display: inline; */
 }
 
-/* li {
-	display: inline;
-} */
+a,
+a *,
+button,
+button *,
+.big-button:hover *,
+.small-button:hover * {
+	cursor: pointer;
+}
 
 a,
 a span {
-	padding: 0.5rem;
+	padding: 0.1rem 0.5rem 0.3rem 0.5rem;
 	margin: 0.2rem;
 	border-radius: 12px;
 }
@@ -53,7 +59,8 @@ a span:hover {
 
 button :hover,
 h2 a:hover,
-.big-button:hover {
+.big-button:hover,
+.small-button:hover {
 	background-color: #00000000;
 }
 
@@ -62,8 +69,12 @@ main {
 }
 
 hr {
-	border-top: solid 3px #832d1eff;
+	border-top: solid 3px var(--text-color);
 	height: 0px;
+	margin: 0.5rem 0.5% 0.25rem 1%;
+}
+hr.height-1-px {
+	border-top-width: 1px;
 }
 
 #logoOmq {
@@ -86,6 +97,13 @@ hr {
 	margin-top: 0.5rem !important;
 }
 
+fieldset {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 0.5rem;
+	justify-content: center;
+	align-items: flex-start;
+}
 /** icons validation **/
 .validated #icon-warning,
 .validated #icon-error,
@@ -111,4 +129,89 @@ hr {
 #icon-error {
 	display: inline-flex;
 }
+
+.width-4-3-2 {
+	width: calc(
+		(1280px - 4rem - ((1.1rem + 9px) * 4) - (1rem * 3)) / 4
+	) !important;
+}
+
+@media screen and (min-width: 1279px) and (min-width: 1280px) {
+	main {
+		margin-left: calc(50vw - (1280px / 2) + 2rem);
+		margin-right: calc(50vw - (1280px / 2) + 2rem);
+	}
+	.width-4-3-2:not(:nth-child(4n + 1)) {
+		margin-left: 1rem;
+	}
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+	.width-4-3-2 {
+		margin-left: 1rem;
+	}
+	.width-4-3-2:nth-child(3n + 3) {
+		margin-right: 1rem;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.width-4-3-2 {
+		margin-left: 1rem;
+	}
+	.width-4-3-2:nth-child(2n + 2) {
+		margin-right: 1rem;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.width-4-3-2 {
+		margin-left: 1rem;
+		margin-right: 1rem;
+	}
+}
+
+/* Webkit */
+*::-webkit-scrollbar-track-piece {
+	height: 3rem;
+}
+
+*::-webkit-scrollbar-track {
+	background-color: var(--main-background-color);
+}
+
+*::-webkit-scrollbar {
+	width: 0.75rem;
+	height: 0.75rem;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: var(--text-color);
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 1rem;
+	border: 0.25rem solid var(--main-background-color);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	background-color: var(--secondary-color);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	border: 3px solid var(--text-color);
+}
+
+*::-webkit-scrollbar-corner {
+	background-color: var(--secondary-color);
+	border-top: 3px solid var(--text-color);
+	border-left: 3px solid var(--text-color);
+}
+
+*::-webkit-inner-spin-button {
+	opacity: 1;
+	cursor: pointer;
+}
+
+/* end Webkit */
 
