--- a/src/components/layout/forms/forms.css
+++ b/src/components/layout/forms/forms.css
@@ -9,32 +9,32 @@ form button {
 	align-items: center;
 }
 
-form select,
-form input {
+select,
+input {
 	border: none;
-	border: 3px solid #f4c008ff;
+	border: 3px solid var(--secondary-color);
 }
 
-form select:hover,
-form input:hover {
+select:hover,
+input:hover {
 	box-shadow: 0.1rem 0.2rem 0.15rem -0.05rem #00000040 inset;
 }
 
-form select:focus,
-form input:focus {
+select:focus,
+input:focus {
 	box-shadow: 0.1rem 0.2rem 0.15rem -0.05rem #00000040 inset;
 }
 
-form select:focus,
-form select:hover,
-form input:focus,
-form input:hover {
+select:focus,
+select:hover,
+input:focus,
+input:hover {
 	outline: none !important;
-	border: solid 3px #832d1eff;
+	border: solid 3px var(--text-color);
 }
 
-form select,
-form input,
+select,
+input,
 form button,
 #modal button {
 	height: 1.9rem;
@@ -62,4 +62,19 @@ form#user-identification-form {
 .ingredient-quantity,
 .ingredient-volumic-mass {
 	width: 5.5rem;
+}
+
+p.user-email {
+	font-weight: bold;
+	margin: 0.25rem 0;
+}
+
+form.user-management {
+	justify-content: start;
+	align-items: flex-start;
+}
+form.user-management > fieldset {
+	display: flex;
+	align-items: center;
+	width: 7rem;
 }
