--- a/src/components/layout/modals/modal.css
+++ b/src/components/layout/modals/modal.css
@@ -15,7 +15,7 @@
 }
 
 #modal > div {
-	background-color: #fefbefff;
+	background-color: var(--main-background-color);
 	max-height: 95vh;
 	max-width: 95vw;
 	padding: 5vh 5vw;
@@ -24,7 +24,7 @@
 	/* justify-content: center;
 	align-items: center; */
 	flex-direction: column;
-	/* color: #832d1eff; */
+	/* color: var(--text-color); */
 }
 
 #modal ul {
