Create collection (Recipe)
Creating collection and connecting it to the API

--- a/src/common.css
+++ b/src/common.css
@@ -3,4 +3,13 @@
 	--main-background-color: #fefbefff; /*  fe fb ef ff   var(--main-background-color)*/
 	--background-color: #fdf3d1ff; /*  fd f3 d1 ff   var(--background-color)*/
 	--secondary-color: #f4c008ff; /*  f4 c0 08 ff   var(--secondary-color)*/
+	--blue-color: #3175e7ff;
+	--green-color: #317537ff;
+	--orange-deep-color: #e17537ff;
+	--pink-color: #e175e7ff;
+	--orange-color: #dda209ff;
 }
+
+/* ABCDEFGHIJKLMNOPQRSTUVWXYZ
+ABCDEF6417 7  090 87AA 8A2
+ 8  3 C    1 */
